# recipebox

./: db.sqlite3  pyproject.toml
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py
recipebox/: settings.py  urls.py
templates/: author_detail.html  index.html  post_detail.html
